--- a/presentation/Store.Web/Views/Home/Index.cshtml
+++ b/presentation/Store.Web/Views/Home/Index.cshtml
@@ -1,8 +1,3 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Интернет-магазин книг - Главаная страница";
 }
-
-<form action="/search" method="get">
-    <input type="text" name="query" value=""/>
-    <button type="submit">Найти</button>
-</form>
