--- a/presentation/Store.Web/Views/Shared/_Layout.cshtml
+++ b/presentation/Store.Web/Views/Shared/_Layout.cshtml
@@ -1,9 +1,9 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Store.Web</title>
+    <title>@ViewData["Title"] - интернет-магазин книг</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -17,35 +17,18 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Store.Web</a>
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
-
-    <partial name="_CookieConsentPartial" />
-
+    <header>
+        <nav class="navbar navbar-expand-sm bg-info">
+            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Интернет магазин книг</a>
+        </nav>
+        <form class="form-inline my-2 my-lg-0" action="@Url.Action("Index", "Search")" method="get">
+            <input class="form-control mr-sm-2" type="search" name="query" placeholder="Автор или название" />
+            <button class="btn btn-success my-2 my-sm-0" type="submit">Найти</button>
+        </form>
+    </header>
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; 2021 - Store.Web</p>
-        </footer>
     </div>
 
     <environment include="Development">
