--- a/presentation/Store.Web/Views/Shared/_Layout.cshtml
+++ b/presentation/Store.Web/Views/Shared/_Layout.cshtml
@@ -20,16 +20,15 @@
     <header>
         <nav class="navbar navbar-expand-sm bg-info">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Интернет магазин книг</a>
-        </nav>
         <form class="form-inline my-2 my-lg-0" action="@Url.Action("Index", "Search")" method="get">
             <input class="form-control mr-sm-2" type="search" name="query" placeholder="Автор или название" />
             <button class="btn btn-success my-2 my-sm-0" type="submit">Найти</button>
         </form>
-        <span class="navbar-text ml-auto">
+        <span class="navbar-text ">
             @{
                 if (Context.Session.TryGetCart(out Cart cart) && cart.TotalCount > 0)
                 {
-                    @:Товаров @cart.TotalCount на сумму @cart.TotalPrice
+                        <a href="@Url.Action("Index", "Order")"> Товаров @cart.TotalCount на сумму @cart.TotalPrice</a>
                 }
                 else
                 {
@@ -38,6 +37,7 @@
                 }
               }
         </span> 
+      </nav>
     </header>
     <div class="container body-content">
         @RenderBody()
